[project]
name = "epos-proxy"
version = "0.1.0"
description = "Epson ePOS Printer Proxy - receive ePOS requests and print to thermal printers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-escpos>=3.1",
    "pyusb>=1.3.1",
]

[project.scripts]
epos-proxy = "epos_proxy.cli:main"
